videos on mobile fix up styling

--- a/css/kupu.css
+++ b/css/kupu.css
@@ -46,4 +46,5 @@
 .video-ex-kupu {
     height: 100%;
     width: 100%;
+    background-color: #111;
 }
