--- a/css/unheard.css
+++ b/css/unheard.css
@@ -56,5 +56,6 @@
 .video-ex-unheard {
     height: 100%;
     width: 100%;
+    background-color: #111;
 }
 
